--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,6 @@ body {
 	width: 80%;
 	margin: 0 auto;
 }
-
 .moreIndicator {
 	height: 50px;
 	width: 50px;
@@ -32,7 +31,6 @@ body {
 	opacity: .8;
 	top: 0px;
 }
-
 .thumbnail {
 	position: relative;
 	box-shadow: 1px 3px 20px 0px;
@@ -70,12 +68,21 @@ body {
 
 /*Add CSS styles to rotate the element 90deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot90 {}
+.rot90 {
+	transition: all 1s ease;
+	transform: rotate(90deg) ;
+}
 
 /*Add CSS styles to rotate the element 180deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot180 {}
+.rot180 {
+	transition: all 1s ease;
+	transform: rotate(180deg);
+}
 
 /*Add CSS styles to rotate the element 270deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot270 {}
+.rot270 {
+	transition: all 1s ease;
+	transform: rotate(270deg);
+}
