--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,13 @@ body {
 	position: absolute;
 	z-index: 3;
 	opacity: .8;
-	top: 0px;
+	right: 45%;
+	bottom: 10px;
 }
 .thumbnail {
 	position: relative;
 	box-shadow: 1px 3px 20px 0px;
+	width: 100%;
 }
 
 
@@ -85,4 +87,9 @@ Make it animate nicely. You'll need CSS3 for this*/
 .rot270 {
 	transition: all 1s ease;
 	transform: rotate(270deg);
+}
+
+div#nav #nextPhoto:hover,
+div#nav #prevPhoto:hover {
+	opacity: .8;
 }
